01-basic-traffic-routing/examples/name-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: name
    version: v2
  name: name-v2
spec:
  ports:
  - port: 5000
    name: http-name
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: name
    version: v2
  type: ClusterIP
